--- a/src/pretix/presale/templates/pretixpresale/event/voucher.html
+++ b/src/pretix/presale/templates/pretixpresale/event/voucher.html
@@ -36,7 +36,8 @@
                                             </a>
                                         {% endif %}
                                         <strong>{{ item.name }}</strong>
-                                        {% if item.description %}<p>{{ item.description|localize|rich_text }}</p>{% endif %}
+                                        {% if item.description %}
+                                            <p>{{ item.description|localize|rich_text }}</p>{% endif %}
                                     </div>
                                     <div class="col-md-2 col-xs-6 price">
                                         {% if item.min_price != item.max_price or item.free_price %}
@@ -65,10 +66,11 @@
                                                                 placeholder="0"
                                                                 min="{{ var.price|stringformat:"0.2f" }}"
                                                                 name="price_{{ item.id }}_{{ var.id }}"
-                                                                step="any" value="{{ var.price|stringformat:"0.2f" }}">
+                                                                step="any"
+                                                                value="{{ var.display_price|stringformat:"0.2f" }}">
                                                     </div>
                                                 {% else %}
-                                                    {{ event.currency }} {{ var.price|floatformat:2 }}
+                                                    {{ event.currency }} {{ var.display_price|floatformat:2 }}
                                                 {% endif %}
                                                 {% if item.tax_rate %}
                                                     <small>{% blocktrans trimmed with rate=item.tax_rate %}
@@ -81,7 +83,7 @@
                                                     <label>
                                                         {% if max_times > 1 %}
                                                             <input type="number" class="form-control input-item-count" placeholder="0" min="0"
-                                                                   max="{{ item.order_max }}" name="variation_{{ item.id }}_{{ var.id }}">
+                                                                    max="{{ item.order_max }}" name="variation_{{ item.id }}_{{ var.id }}">
                                                         {% else %}
                                                             <input type="radio" name="_voucher_item"
                                                                     {% if options == 1 %}checked="checked"{% endif %}
@@ -135,7 +137,7 @@
                                         <label>
                                             {% if max_times > 1 %}
                                                 <input type="number" class="form-control input-item-count" placeholder="0" min="0"
-                                                       max="{{ item.order_max }}" name="item_{{ item.id }}">
+                                                        max="{{ item.order_max }}" name="item_{{ item.id }}">
                                             {% else %}
                                                 <input type="radio" name="_voucher_item"
                                                         {% if options == 1 %}checked="checked"{% endif %}
