Introduce a setting to show net prices in the frontend

--- a/src/pretix/control/templates/pretixcontrol/event/settings.html
+++ b/src/pretix/control/templates/pretixcontrol/event/settings.html
@@ -25,6 +25,7 @@
             {% bootstrap_field sform.contact_mail layout="horizontal" %}
             {% bootstrap_field sform.imprint_url layout="horizontal" %}
             {% bootstrap_field sform.show_quota_left layout="horizontal" %}
+            {% bootstrap_field sform.display_net_prices layout="horizontal" %}
         </fieldset>
         <fieldset>
             <legend>{% trans "Timeline" %}</legend>
