--- a/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
+++ b/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
@@ -70,22 +70,35 @@
                         <input type="hidden" name="item_{{ line.item.id }}"
                                 value="1" />
                         <input type="hidden" name="price_{{ line.item.id }}"
-                                value="{{ line.price }}" />
+                                value="{% if event.settings.display_net_prices %}{{ line.net_price }}{% else %}{{ line.price }}{% endif %}" />
                     {% endif %}
                     <button class="btn btn-mini btn-link"><i class="fa fa-plus"></i></button>
                 </form>
                 {% endif %}
             </div>
             <div class="singleprice price">
-                {{ event.currency }} {{ line.price|floatformat:2 }}
+                {% if event.settings.display_net_prices %}
+                    {{ event.currency }} {{ line.net_price|floatformat:2 }}
+                {% else %}
+                    {{ event.currency }} {{ line.price|floatformat:2 }}
+                {% endif %}
             </div>
         {% endif %}
         <div class="totalprice price">
-            <strong>{{ event.currency }} {{ line.total|floatformat:2 }}</strong>
-            {% if line.tax_rate %}
-                <br /><small>{% blocktrans trimmed with rate=line.tax_rate %}
-                incl. {{ rate }}% taxes
-            {% endblocktrans %}</small>
+            {% if event.settings.display_net_prices %}
+                <strong>{{ event.currency }} {{ line.net_total|floatformat:2 }}</strong>
+                {% if line.tax_rate %}
+                    <br /><small>{% blocktrans trimmed with rate=line.tax_rate %}
+                    <strong>plus</strong> {{ rate }}% taxes
+                    {% endblocktrans %}</small>
+                {% endif %}
+            {% else %}
+                <strong>{{ event.currency }} {{ line.total|floatformat:2 }}</strong>
+                {% if line.tax_rate %}
+                    <br /><small>{% blocktrans trimmed with rate=line.tax_rate %}
+                    incl. {{ rate }}% taxes
+                    {% endblocktrans %}</small>
+                {% endif %}
             {% endif %}
         </div>
         {% if download %}
@@ -102,19 +115,48 @@
     </div>
 {% endfor %}
 {% if cart.payment_fee %}
-    {# TODO: Tax rate? #}
     <div class="row cart-row">
         <div class="col-md-4 col-xs-6">
             <strong>{% trans "Payment method fee" %}</strong>
         </div>
         <div class="col-md-3 col-xs-6 col-md-offset-5 price">
-            <strong>{{ event.currency }} {{ cart.payment_fee|floatformat:2 }}</strong>
-            {% if cart.payment_fee_tax_rate %}
-                <br/>
-                <small>{% blocktrans trimmed with rate=cart.payment_fee_tax_rate %}
-                    incl. {{ rate }}% taxes
-                {% endblocktrans %}</small>
+            {% if event.settings.display_net_prices %}
+                <strong>{{ event.currency }} {{ cart.payment_fee_net|floatformat:2 }}</strong>
+                {% if cart.payment_fee_tax_rate %}
+                    <br/>
+                    <small>{% blocktrans trimmed with rate=cart.payment_fee_tax_rate %}
+                        <strong>plus</strong> {{ rate }}% taxes
+                    {% endblocktrans %}</small>
+                {% endif %}
+            {% else %}
+                <strong>{{ event.currency }} {{ cart.payment_fee|floatformat:2 }}</strong>
+                {% if cart.payment_fee_tax_rate %}
+                    <br/>
+                    <small>{% blocktrans trimmed with rate=cart.payment_fee_tax_rate %}
+                        incl. {{ rate }}% taxes
+                    {% endblocktrans %}</small>
+                {% endif %}
             {% endif %}
+        </div>
+        <div class="clearfix"></div>
+    </div>
+{% endif %}
+{% if event.settings.display_net_prices %}
+    <div class="row cart-row total">
+        <div class="col-md-4 col-xs-6">
+            <strong>{% trans "Net total" %}</strong>
+        </div>
+        <div class="col-md-3 col-xs-6 col-md-offset-5 price">
+            {{ event.currency }} {{ cart.net_total|floatformat:2 }}
+        </div>
+        <div class="clearfix"></div>
+    </div>
+    <div class="row cart-row">
+        <div class="col-md-4 col-xs-6">
+            <strong>{% trans "Taxes" %}</strong>
+        </div>
+        <div class="col-md-3 col-xs-6 col-md-offset-5 price">
+            {{ event.currency }} {{ cart.tax_total|floatformat:2 }}
         </div>
         <div class="clearfix"></div>
     </div>
