--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -189,12 +189,20 @@
                                 {% endif %}
                             </div>
                             <div class="col-md-3 col-xs-6 price">
-                                <strong>{{ event.currency }} {{ line.price|floatformat:2 }}</strong>
-                                {% if line.tax_rate %}
-                                    <br/>
-                                    <small>{% blocktrans trimmed with rate=line.tax_rate %}
+                                {% if event.settings.display_net_prices %}
+                                    <strong>{{ event.currency }} {{ line.net_price|floatformat:2 }}</strong>
+                                    {% if line.tax_rate %}
+                                        <br /><small>{% blocktrans trimmed with rate=line.tax_rate %}
+                                        <strong>plus</strong> {{ rate }}% taxes
+                                    {% endblocktrans %}</small>
+                                    {% endif %}
+                                {% else %}
+                                    <strong>{{ event.currency }} {{ line.price|floatformat:2 }}</strong>
+                                    {% if line.tax_rate %}
+                                        <br /><small>{% blocktrans trimmed with rate=line.tax_rate %}
                                         incl. {{ rate }}% taxes
                                     {% endblocktrans %}</small>
+                                    {% endif %}
                                 {% endif %}
                             </div>
                             <div class="clearfix"></div>
@@ -206,13 +214,43 @@
                                 <strong>{% trans "Payment method fee" %}</strong>
                             </div>
                             <div class="col-md-3 col-xs-6 col-md-offset-5 price">
-                                <strong>{{ event.currency }} {{ items.payment_fee|floatformat:2 }}</strong>
-                                {% if order.payment_fee_tax_rate %}
-                                    <br/>
-                                    <small>{% blocktrans trimmed with rate=order.payment_fee_tax_rate %}
-                                        incl. {{ rate }}% taxes
-                                    {% endblocktrans %}</small>
+                                {% if event.settings.display_net_prices %}
+                                    <strong>{{ event.currency }} {{ order.payment_fee_net|floatformat:2 }}</strong>
+                                    {% if order.payment_fee_tax_rate %}
+                                        <br/>
+                                        <small>{% blocktrans trimmed with rate=order.payment_fee_tax_rate %}
+                                            <strong>plus</strong> {{ rate }}% taxes
+                                        {% endblocktrans %}</small>
+                                    {% endif %}
+                                {% else %}
+                                    <strong>{{ event.currency }} {{ items.payment_fee|floatformat:2 }}</strong>
+                                    {% if order.payment_fee_tax_rate %}
+                                        <br/>
+                                        <small>{% blocktrans trimmed with rate=order.payment_fee_tax_rate %}
+                                            incl. {{ rate }}% taxes
+                                        {% endblocktrans %}</small>
+                                    {% endif %}
                                 {% endif %}
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                    {% endif %}
+                    {% if event.settings.display_net_prices %}
+                        <div class="row-fluid product-row total">
+                            <div class="col-md-4 col-xs-6">
+                                <strong>{% trans "Net total" %}</strong>
+                            </div>
+                            <div class="col-md-3 col-xs-6 col-md-offset-5 price">
+                                {{ event.currency }} {{ items.net_total|floatformat:2 }}
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="row-fluid product-row">
+                            <div class="col-md-4 col-xs-6">
+                                <strong>{% trans "Taxes" %}</strong>
+                            </div>
+                            <div class="col-md-3 col-xs-6 col-md-offset-5 price">
+                                {{ event.currency }} {{ items.tax_total|floatformat:2 }}
                             </div>
                             <div class="clearfix"></div>
                         </div>
