--- a/src/pretix/control/templates/pretixcontrol/event/logs.html
+++ b/src/pretix/control/templates/pretixcontrol/event/logs.html
@@ -1,5 +1,6 @@
 {% extends "pretixcontrol/items/base.html" %}
 {% load i18n %}
+{% load staticfiles %}
 {% block title %}{% trans "Event logs" %}{% endblock %}
 {% block inside %}
     <h1>{% trans "Event logs" %}</h1>
@@ -32,6 +33,11 @@
                     <div class="col-lg-2 col-sm-6 col-xs-12">
                         {% if log.user %}
                             <span class="fa fa-user"></span> {{ log.user.get_full_name }}
+                            {% if log.user.is_superuser %}
+                                <img src="{% static "pretixbase/img/pretix-icon-colored.svg" %}"
+                                     data-toggle="tooltip" class="user-admin-icon"
+                                     title="{% trans "This change was performed by a pretix administrator." %}">
+                            {% endif %}
                         {% endif %}
                     </div>
                     <div class="col-lg-2 col-sm-12 col-xs-12">
