Display logo on organizer's page

--- a/src/pretix/static/pretixpresale/scss/main.scss
+++ b/src/pretix/static/pretixpresale/scss/main.scss
@@ -23,7 +23,7 @@ footer {
     .loginbox {
         padding-top: 15px;
     }
-    .event-logo {
+    .event-logo, .organizer-logo {
         max-width: 100%;
         height: auto;
     }
