--- a/src/pretix/control/templates/pretixcontrol/organizers/edit.html
+++ b/src/pretix/control/templates/pretixcontrol/organizers/edit.html
@@ -18,7 +18,7 @@
         <fieldset>
             <legend>{% trans "Display settings" %}</legend>
             {% bootstrap_form_errors sform %}
-            {% bootstrap_field sform.logo_image layout="horizontal" %}
+            {% bootstrap_field sform.organizer_logo_image layout="horizontal" %}
         </fieldset>
         <div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
