--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -28,8 +28,10 @@
                     <img src="{{ event_logo|thumbnail_url:'logo' }}" alt="{{ event.name }}" class="event-logo" />
                 </a>
             {% else %}
-                <h1><a href="{% eventurl event "presale:event.index" %}">{{ event.name }}</a></h1>
-                <small>{{ event.get_date_range_display }}</small>
+                <h1>
+                    <a href="{% eventurl event "presale:event.index" %}">{{ event.name }}</a>
+                    <small>{{ event.get_date_range_display }}</small>
+                </h1>
             {% endif %}
         </div>
         <div class="pull-right loginbox">
