--- a/src/pretix/control/templates/pretixcontrol/base.html
+++ b/src/pretix/control/templates/pretixcontrol/base.html
@@ -189,7 +189,7 @@
                             {% endblocktrans %}
                         {% endwith %}
                         {% if development_warning %}
-                            <span class="text-warning">&middot {% trans "running in development mode" %}</span>
+                            <span class="text-warning">&middot; {% trans "running in development mode" %}</span>
                         {% endif %}
                     </footer>
                 </div>
