--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -163,7 +163,13 @@
                                                     {% endblocktrans %}</small>
                                                 {% endif %}
                                             </div>
-                                            {% if var.cached_availability.0 == 100 %}
+                                            {% if item.require_voucher %}
+                                                <div class="col-md-2 col-xs-6 availability-box unavailable">
+                                                    <small>
+                                                        {% trans "Enter a voucher code below to buy this ticket." %}
+                                                    </small>
+                                                </div>
+                                            {% elif var.cached_availability.0 == 100 %}
                                                 <div class="col-md-2 col-xs-6 availability-box available">
                                                     <input type="number" class="form-control input-item-count" placeholder="0" min="0"
                                                             max="{{ var.order_max }}"
