--- a/src/pretix/control/templates/pretixcontrol/item/index.html
+++ b/src/pretix/control/templates/pretixcontrol/item/index.html
@@ -25,6 +25,7 @@
                     <legend>{% trans "Availability" %}</legend>
                     {% bootstrap_field form.available_from layout="horizontal" %}
                     {% bootstrap_field form.available_until layout="horizontal" %}
+                    {% bootstrap_field form.max_per_order layout="horizontal" %}
                     {% bootstrap_field form.require_voucher layout="horizontal" %}
                     {% bootstrap_field form.hide_without_voucher layout="horizontal" %}
                     {% bootstrap_field form.allow_cancel layout="horizontal" %}
