--- a/src/pretix/static/pretixpresale/scss/_event.scss
+++ b/src/pretix/static/pretixpresale/scss/_event.scss
@@ -26,6 +26,9 @@
             color: $alert-warning-text;
         }
     }
+    .item-checkbox-label {
+        display: block;
+    }
 
     .productpicture {
         float: left;
