--- a/src/pretix/control/templates/pretixcontrol/event/mail.html
+++ b/src/pretix/control/templates/pretixcontrol/event/mail.html
@@ -24,22 +24,24 @@
                     <div id="order_placed" class="panel-collapse collapse preview-panel">
                         <div class="panel-body">
                             <div>
-                                <label class="col-md-3 control-label">Text</label>
+                                <label class="col-md-3 control-label">{% trans "Text" %}</label>
                                 <div class="col-md-9">
                                     <div class="tab-content">
                                         <div id="order_placed_edit" class="tab-pane fade in active">
                                             {% bootstrap_field form.mail_text_order_placed show_label=False %}
                                         </div>
                                         <div id="order_placed_preview" class="tab-pane">
-                                            {% bootstrap_field form.mail_text_order_placed show_label=False %}
+                                            {% for l in request.event.settings.locales %}
+                                                <p lang="{{ l }}" preview-for="mail_text_order_placed_{{ forloop.counter0 }}">ss</p>
+                                            {% endfor %}
                                         </div>
                                     </div>
                                     <ul class="nav nav-pills pull-right">
                                         <li role="presentation" class="active">
-                                            <a data-toggle="pill" type="edit"><i class="fa fa-pencil-square-o fa-fw"></i> {% trans "Edit" %}</a>
+                                            <a data-toggle="pill" type="edit" href="#order_placed_edit"><i class="fa fa-pencil-square-o fa-fw"></i> {% trans "Edit" %}</a>
                                         </li>
                                         <li role="presentation">
-                                            <a data-toggle="pill" type="preview"><i class="fa fa-tv fa-fw"></i> {% trans "Preview" %}</a>
+                                            <a data-toggle="pill" type="preview" href="#order_placed_preview"><i class="fa fa-tv fa-fw"></i> {% trans "Preview" %}</a>
                                         </li>
                                     </ul>
                                 </div>
