create fragment template for mail preview

--- a/src/pretix/control/templates/pretixcontrol/event/mail.html
+++ b/src/pretix/control/templates/pretixcontrol/event/mail.html
@@ -2,7 +2,8 @@
 {% load i18n %}
 {% load bootstrap3 %}
 {% block inside %}
-    <form action="" method="post" class="form-horizontal" enctype="multipart/form-data" mail-preview-url="{% url "control:event.settings.mail.preview" event=request.event.slug organizer=request.event.organizer.slug %}">
+    <form action="" method="post" class="form-horizontal" enctype="multipart/form-data"
+          mail-preview-url="{% url "control:event.settings.mail.preview" event=request.event.slug organizer=request.event.organizer.slug %}">
         {% csrf_token %}
         {% bootstrap_form_errors form %}
         <fieldset>
@@ -13,42 +14,7 @@
         <fieldset>
             <legend>{% trans "E-mail content" %}</legend>
             <div class="panel-group" id="questions_group">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" href="#order_placed">
-                                <strong>{% trans "Placed order" %}</strong>
-                            </a>
-                        </h4>
-                    </div>
-                    <div id="order_placed" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            <div id="mail_text_order_placed_panel" class="preview-panel" for="mail_text_order_placed">
-                                <label class="col-md-3 control-label">{% trans "Text" %}</label>
-                                <div class="col-md-9">
-                                    <div class="tab-content">
-                                        <div id="mail_text_order_placed_edit" class="tab-pane fade in active">
-                                            {% bootstrap_field form.mail_text_order_placed show_label=False %}
-                                        </div>
-                                        <div id="mail_text_order_placed_preview" class="tab-pane">
-                                            {% for l in request.event.settings.locales %}
-                                                <pre lang="{{ l }}" for="mail_text_order_placed_{{ forloop.counter0 }}"></pre>
-                                            {% endfor %}
-                                        </div>
-                                    </div>
-                                    <ul class="nav nav-pills pull-right">
-                                        <li role="presentation" class="active">
-                                            <a data-toggle="pill" type="edit" href="#mail_text_order_placed_edit"><i class="fa fa-pencil-square-o fa-fw"></i> {% trans "Edit" %}</a>
-                                        </li>
-                                        <li role="presentation">
-                                            <a data-toggle="pill" type="preview" href="#mail_text_order_placed_preview"><i class="fa fa-tv fa-fw"></i> {% trans "Preview" %}</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {% include "pretixcontrol/event/mail_settings_fragment.html" with pid="order_placed" title="Placed order" items="mail_text_order_placed" %}
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
@@ -114,7 +80,7 @@
                             </a>
                         </h4>
                     </div>
-                    <div id="order_expire" class="panel-collapse collapse">
+                    <div id="order_expirew" class="panel-collapse collapse">
                         <div class="panel-body">
                             {% bootstrap_field form.mail_days_order_expire_warning layout="horizontal" %}
                             {% bootstrap_field form.mail_text_order_expire_warning layout="horizontal" %}
