--- a/src/pretix/control/templates/pretixcontrol/user/2fa_main.html
+++ b/src/pretix/control/templates/pretixcontrol/user/2fa_main.html
@@ -47,7 +47,7 @@
     {% endif %}
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h3 class="panel-title">{% trans "Enabled devices" %}</h3>
+            <h3 class="panel-title">{% trans "Registered devices" %}</h3>
         </div>
         <ul class="list-group">
             {% for d in devices %}
