--- a/src/pretix/control/templates/pretixcontrol/items/quotas.html
+++ b/src/pretix/control/templates/pretixcontrol/items/quotas.html
@@ -36,7 +36,7 @@
                     <th>{% trans "Products" %}</th>
                     <th>{% trans "Total capacity" %}</th>
                     <th>{% trans "Capacity left" %}</th>
-                    <th></th>
+                    <th class="action-col-2"></th>
                 </tr>
                 </thead>
                 <tbody>
