--- a/src/pretix/static/pretixcontrol/scss/_flags.scss
+++ b/src/pretix/static/pretixcontrol/scss/_flags.scss
@@ -256,4 +256,4 @@ pre[lang=za], input[lang=za], textarea[lang=za] { background-image: url(static('
 pre[lang=zm], input[lang=zm], textarea[lang=zm] { background-image: url(static('pretixbase/img/flags/zm.png')); }
 pre[lang=zw], input[lang=zw], textarea[lang=zw] { background-image: url(static('pretixbase/img/flags/zw.png')); }
 
-pre[lang=en], textarea[lang=en] { background-image: url(static('pretixbase/img/flags/gb.png')); }
+pre[lang=en], input[lang=en], textarea[lang=en] { background-image: url(static('pretixbase/img/flags/gb.png')); }
